# BDD_Distributor

./: .clang-format  .clang-tidy  BDD_Distributor.sln  CMakeLists.txt  compile_commands.json
BDD_Distributor/: BDD_Distributor.cpp  BDD_Distributor.h  BDD_Distributor.sh  BDD_Distributor.vcxproj  BDD_Distributor.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Distributor.cpp  Distributor.h  Divider.h  MPICommunicator.cpp  MPICommunicator.h  MPIManager.cpp  MPIManager.h  Makefile  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Node.cpp  Node.h  PlaManager.cpp  PlaManager.h  Process.h  bdd_distributor.cpp  bdd_distributor.h  bdd_distributor.sh  cmake_install.cmake  divider.h  f.dot  main.cpp  merger.cpp  merger.h  module.cpp  module.h  module_manager.cpp  module_manager.h  mpi_communicator.cpp  mpi_communicator.h  mpi_manager.cpp  (+4 more)
BDD_Distributor/Modules/: module_map.conf
BDD_Distributor/Modules/Experiments/: experiment_map.conf
BDD_Distributor/Modules/First_Level/: A or B or C.pla
BDD_Distributor/Modules/Second_Level/: A or B.pla
BDD_Distributor/PLA-Files/: simplePLA.pla
BDD_Distributor/PLA-Files/load/: simplePLA.pla
BDD_Distributor/PLA-Files/node0/: file0.pla
BDD_Distributor/PLA-Files/node1/: file0.pla
BDD_Distributor/PLA-Files/node2/: file0.pla
BDD_Distributor/PLA-Files/node3/: file0.pla
BDD_Distributor/PLA-Files/node4/: file0.pla
BDD_Distributor/PLA-Files/write/: file0.pla  file1.pla
